# ETI_private

./: .gitignore
AISD/AiSD/: fw.h
AISD/AiSD/AiSD/: algorithm.hpp  main.cpp
AISD/AiSD/AiSD.xcodeproj/: project.pbxproj
AISD/AiSD/AiSD.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AISD/AiSD/AiSD.xcodeproj/project.xcworkspace/xcshareddata/: AiSD.xccheckout
AISD/AiSD/AiSD/.stos/: config
AISD/DST/DST/: main.cpp
AISD/DST/DST.xcodeproj/: project.pbxproj
AISD/DST/DST.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AISD/DST/DST.xcodeproj/project.xcworkspace/xcshareddata/: DST.xccheckout
AISD/DST/DST/.stos/: config
AISD/Spacer/Spacer/: main.cpp
AISD/Spacer/Spacer.xcodeproj/: project.pbxproj
AISD/Spacer/Spacer.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AISD/Tarzan2/Tarzan2/: main.cpp
AISD/Tarzan2/Tarzan2.xcodeproj/: project.pbxproj
AISD/Tarzan2/Tarzan2.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AISD/Tarzan2/Tarzan2/.stos/: config
AISD/hash_map/hash_map/: main.cpp
AISD/hash_map/hash_map.xcodeproj/: project.pbxproj
AISD/hash_map/hash_map.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AISD/w_kulki/w_kulki/: main.cpp
AISD/w_kulki/w_kulki.xcodeproj/: project.pbxproj
AISD/w_kulki/w_kulki.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AKO/Lab5_1/: Assembler.v12.suo.doc  Assembler.vcxproj.filters  Source.asm  Source1.cpp
AKO/Lab5_2/: Source.asm  Source1.cpp
AKO/Lab5_3/: Assembler.sln  Assembler.vcxproj  Source.asm  Source1.cpp
ALGEBRA/Kryptografia/Kryptografia/: main.cpp
ALGEBRA/Kryptografia/Kryptografia.xcodeproj/: project.pbxproj
ALGEBRA/Kryptografia/Kryptografia.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
BD/Stypendia/: Create.sql  Drop.sql  Insert.sql
HIH/P1/XML/: .gitignore  MG_sredni_2013-05-19.xml  Zawody_RJnO.xsd  wyniki.csv  wyniki.py  wyniki.xml
HIH/P1/XSLT/: in.xml  out_fo.fo  out_html1.html  out_html2.html  out_xml.xml  style.css  style2.css  to_fo.xsl  to_html1.xsl  to_html2.xsl  to_xml.xsl
JP/Smalltalk/Projekt/: Page 1.ws  Page 2.ws  Projekt.cha  Wielokaty.st  kwadrat.st
MN/MN2/: Gauss.hs  Main.hs
MN/MN2x/: CMakeLists.txt  JAKUB_TRZEBIATOWSKI_PR_2_GRUPA_6.cpp  MN2-Copy1.ipynb  MN2.html  MN2.ipynb  Matrix.cpp  gauss.cpp  gauss.h  main.cpp  metody_numeryczne_projekt2.py
MN/MN3/: CMakeLists.txt  JAKUB_TRZEBIATOWSKI_PR_3_GRUPA_6.cpp  JAKUB_TRZEBIATOWSKI_PR_3_GRUPA_6.html  MN3.ipynb  Matrix.cpp  Matrix.h  main.cpp  metody_numeryczne_projekt3.py
PO/PO/: Complex.cpp  Complex.h  Liczba.cpp  Liczba.h
PO/PO/PO/: main.cpp
PO/PO/PO.xcodeproj/: project.pbxproj
PO/PO/PO.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
PO/PyVirtualWorld/: mainwindow.ui.autosave
PO/VirtualWorld/: Animal.cpp  Animal.h  CMakeLists.txt  Human.cpp  Human.h  Organism.cpp  Organism.h  Plant.cpp  Plant.h  VariousAnimals.cpp  VariousAnimals.h  VariousPlants.cpp  VariousPlants.h  World.cpp  World.h  main.cpp
PO/WirtualnySwiat/: Antylopa.py  Czlowiek.py  Guarana.py  Lis.py  Mlecz.py  Organizm.py  Owca.py  Roslina.py  Swiat.py  Trawa.py  WilczeJagody.py  Wilk.py  WirtualnySwiat.py  Zolw.py  Zwierze.py
POPR/LO/Arkanoid/: Arkanoid.psd  CMakeLists.txt  main.cpp  vector2.h
POPR/LO/Arkanoid/resources/: levels.txt  levels__.txt  scores.txt
POPR/LO/Kolko_i_krzyzyk/: Kolko_i_krzyzyk.sln
POPR/LO/Kolko_i_krzyzyk/Kolko_i_krzyzyk/: Kolko_i_krzyzyk.cpp  Kolko_i_krzyzyk.vcxproj  Kolko_i_krzyzyk.vcxproj.filters
POPR/LO/Sudoku/: CMakeLists.txt  algorithm.h  common.h  config.h  list.h  main.cpp  map.h  ncurses_gui.cpp  ncurses_gui.h  split.py  sudoku.cpp  sudoku.h  xml.cpp  xml.h
POPR/LO/Sudoku/resources/: a.xml
POPR/LO/Sudoku/resources/easy/: 0.txt  1.txt  10.txt  100.txt  1000.txt  1001.txt  1002.txt  1003.txt  1004.txt  1005.txt  1006.txt  1007.txt  1008.txt  1009.txt  101.txt  1010.txt  102.txt  103.txt  104.txt  105.txt  106.txt  107.txt  108.txt  109.txt  11.txt  110.txt  111.txt  112.txt  113.txt  114.txt  115.txt  116.txt  117.txt  118.txt  119.txt  12.txt  120.txt  121.txt  122.txt  123.txt  (+971 more)
POPR/LO/Sudoku/resources/hard/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  (+55 more)
POPR/LO/Sudoku_Artur/: pseudokod.txt
POPR/LO/Sudoku_Tomek/: CMakeLists.txt  conio2.cpp  conio2.h  conio2_ncurses.cpp  conio2_ncurses.h  conio2_win.cpp  conio2_win.h  in.txt  main.cpp  main_.cpp  ncurses_gui.cpp  out.txt  projekt1.sln  projekt1.vcxproj  sudoku.cpp  sudoku.h  sudoku.txt  sudoku2.txt  sudoku_grid.h  to437.py
PR/Monitors/: CMakeLists.txt
PR/Monitors/src/: main.cpp
SBD/p1/: CMakeLists.txt  main.cpp
SBD/p2/: BElement.cpp  BElement.h  BFindResult.cpp  BFindResult.h  BNode.cpp  BNode.h  BPage.cpp  BPage.h  BStorage.cpp  BStorage.h  BTree.cpp  BTree.h  BTreeHeader.cpp  BTreeHeader.h  BTreeStorage.cpp  BTreeStorage.h  CMakeLists.txt  Config.cpp  Config.h  ContentFile.cpp  ContentFile.h  FileStorage.cpp  FileStorage.h  IndexFile.cpp  IndexFile.h  IndexedFile.cpp  IndexedFile.h  MemStorage.cpp  MemStorage.h  Metrics.cpp  Metrics.h  PagedFile.cpp  PagedFile.h  Record.cpp  Record.h  common.h  main.cpp  test.cpp
SBD/p2/test/: 0.txt  1.txt  2.txt  cmd1.txt
SO/ls/ls/: main.cpp
SO/ls/ls.xcodeproj/: project.pbxproj
SO/ls/ls.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
SO/stos/: stos.1  stos.md  stos.sh
(+38 files in other folders)
